# PyFest

./: CODE-OF-CONDUCT.md  README.md  arctangent.py  lineup-page.py  lineup.py  main.py  pyproject.toml
test/: __init__.py  test_find_artists.py  test_find_easyocr_lineup.py
test/arc-tangent-lineup.html/: LINE-UP – ArcTanGent.html
