[tool.poetry]
name = "pyfest"
version = "0.1.0"
description = ""
authors = ["https://github.com/DaveParr"]
license = "[gpl-3.0]"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
easyocr = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
